--- a/personal/package.json
+++ b/personal/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^5.12.10",
     "morgan": "~1.9.1",
     "mysql2": "^2.2.5",
+    "node": "^14.0.0",
     "nodemon": "^2.0.6",
     "sequelize": "^6.5.0"
   }
